# colon2str

./: README.md  README.rst  pyproject.toml
colon2equal/: __main__.py  transfer.py
tests/: test_colon2equal.py  test_multiple.py  test_transfer.py  test_type_transfer.py
