[tool.poetry]
name = "colon2equal"
version = "0.1.0"
description = ""
authors = ["svtter <svtter@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest-pep8 = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
colon2equal = 'colon2equal.__main__:main'